src/main/java/com/example/backend/error/PasswordMissmatchException.java
package com.example.backend.error;

public class PasswordMissmatchException extends RuntimeException{
    public PasswordMissmatchException(String message) {
        super(message);
    }
}
